test/fail/integration/_fail_grammar_let_stmts_5.hs
main = do
       let x :: In
       print "hello"